@@ -23,20 +23,72 @@ class TestModule(nfoview.TestCase):
 
     url = "http://home.gna.org/nfoview"
 
-    def test__command_exists(self):
+    def browse_url_silent(self, url):
 
-        if os.path.isfile("/bin/sh"):
-            assert nfoview.util._command_exists("sh")
-        assert not nfoview.util._command_exists("+?")
+        try: return nfoview.util.browse_url(url)
+        except OSError: return None
 
     def test_browse_url(self):
 
         nfoview.util.browse_url(self.url)
         nfoview.util.browse_url(self.url, "echo")
+
+    def test_browse_url__command(self):
+
         environment = os.environ.copy()
         os.environ.clear()
+        platform = sys.platform
+        sys.platform = "linux2"
+        is_command = nfoview.util.is_command
+        nfoview.util.is_command = lambda x: (x == "xdg-open")
+        self.browse_url_silent(self.url)
+        nfoview.util.is_command = lambda x: (x == "exo-open")
+        self.browse_url_silent(self.url)
+        os.environ = environment
+        sys.platform = platform
+        nfoview.util.is_command = is_command
+
+    def test_browse_url__environment(self):
+
+        environment = os.environ.copy()
+        os.environ.clear()
+        platform = sys.platform
+        sys.platform = "linux2"
+        os.environ["GNOME_DESKTOP_SESSION_ID"] = "1"
+        self.browse_url_silent(self.url)
+        os.environ.clear()
+        os.environ["KDE_FULL_SESSION"] = "1"
+        self.browse_url_silent(self.url)
+        os.environ = environment
+        sys.platform = platform
+
+    def test_browse_url__platform(self):
+
+        environment = os.environ.copy()
+        os.environ.clear()
+        platform = sys.platform
+        sys.platform = "darwin"
+        self.browse_url_silent(self.url)
+        sys.platform = "win32"
+        self.browse_url_silent(self.url)
+        os.environ = environment
+        sys.platform = platform
+
+    def test_browse_url__webbrowser(self):
+
+        environment = os.environ.copy()
+        os.environ.clear()
+        platform = sys.platform
+        sys.platform = "linux2"
         nfoview.util.browse_url(self.url)
         os.environ = environment
+        sys.platform = platform
+
+    def test_is_command(self):
+
+        if os.path.isfile("/bin/sh"):
+            assert nfoview.util.is_command("sh")
+        assert not nfoview.util.is_command("+?")
 
     def test_uri_to_path__unix(self):
 
